leaderboard spacing fixes

--- a/src/tenants/planet/LeaderBoard/components/Stats.module.scss
+++ b/src/tenants/planet/LeaderBoard/components/Stats.module.scss
@@ -1,39 +1,47 @@
 @import './../../../../theme/theme';
 
-.container{
-    background-color: #007A49 ;
-    background-image: linear-gradient(to bottom, #007A49 , #68B030);
-    padding: 64px;
-    padding-bottom: 40px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+.wrapper {
+  background-color: #007a49;
+  background-image: linear-gradient(to bottom, #007a49, #68b030);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.statCard{
-    background-color: $light;
-    border-radius: 13px;
-    height: 192px;
-    width: 192px;
-    padding: 26px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 24px;
+.container {
+  padding: 64px 0 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 1280px;
+  width: 100%;
 }
 
-.statNumber{
-    font-family: $primaryFontFamily;
-    font-size: 49px;
-    font-weight: bold;
-    color: #68B030;
+.statCard {
+  background-color: $light;
+  border-radius: 13px;
+  height: 192px;
+  width: 192px;
+  padding: 26px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 24px;
 }
 
-.statText{
-    font-family: $primaryFontFamily;
-    font-size: 14px;
-    font-weight: bold;
+.statNumber {
+  font-family: $primaryFontFamily;
+  font-size: 49px;
+  font-weight: bold;
+  color: #68b030;
+}
+
+.statText {
+  font-family: $primaryFontFamily;
+  font-size: 14px;
+  font-weight: bold;
 }
